[gd_scene load_steps=19 format=2]

[ext_resource path="res://actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/s1t.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/white_square.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/emptywhitecircle.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/empty_parry.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/successful_parry.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/player_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/color_switch.wav" type="AudioStream" id=8]
[ext_resource path="res://actors/leveling/PerkApplier.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 6.5 )

[sub_resource type="Animation" id=5]
resource_name = "A"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.294118, 0, 0.572549, 1 ), Color( 0.101961, 1, 0.101961, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "B"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 1, 0.101961, 1 ), Color( 0.294118, 0, 0.572549, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "HIT_A"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.866736, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.101961, 1, 0.101961, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 0.101961, 1, 0.101961, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 0.101961, 1, 0.101961, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 1, 1, 1, 0.278431 ), Color( 0.101961, 1, 0.101961, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HIT_B"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.866736, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.294118, 0, 0.572549, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 0.294118, 0, 0.572549, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 0.294118, 0, 0.572549, 1 ), Color( 1, 1, 1, 0.278431 ), Color( 1, 1, 1, 0.278431 ), Color( 0.294118, 0, 0.572549, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "PLAYER_DEATH"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_to_game_over"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 40.0

[sub_resource type="AudioStreamSample" id=9]

[node name="Player" type="KinematicBody2D" groups=["PLAYER"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.294118, 0, 0.572549, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/A = SubResource( 5 )
anims/B = SubResource( 4 )
anims/HIT_A = SubResource( 2 )
anims/HIT_B = SubResource( 6 )
anims/PLAYER_DEATH = SubResource( 8 )
anims/RESET = SubResource( 3 )

[node name="ParryArea" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="ParryArea"]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryArea"]
shape = SubResource( 7 )

[node name="ParryCooldownTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = 48.0
margin_right = 16.0
margin_bottom = 62.0

[node name="Sfx" type="Node2D" parent="."]

[node name="PlayerHit" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 7 )

[node name="ParryZero" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 5 )
bus = "player"

[node name="ParrySuccess" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 6 )
bus = "player"

[node name="ParryGone" type="AudioStreamPlayer" parent="Sfx"]

[node name="PlayerDeath" type="AudioStreamPlayer" parent="Sfx"]

[node name="BulletFly" type="AudioStreamPlayer" parent="Sfx"]
stream = SubResource( 9 )
bus = "player"

[node name="ColorSwitch" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 8 )
bus = "color"

[node name="FlySoundDelay" type="Timer" parent="."]
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]

[node name="HealingTickrate" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="PerkApplier" type="Node2D" parent="."]
script = ExtResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="ParryArea" to="." method="_on_ParryArea_area_entered"]
[connection signal="area_exited" from="ParryArea" to="." method="_on_ParryArea_area_exited"]
[connection signal="timeout" from="ParryCooldownTimer" to="." method="_on_ParryCooldownTimer_timeout"]
[connection signal="timeout" from="FlySoundDelay" to="." method="_on_FlySoundDelay_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_DamageCooldown_timeout"]
[connection signal="timeout" from="HealingTickrate" to="." method="_on_HealingTickrate_timeout"]
